--- a/package.json
+++ b/package.json
@@ -13,8 +13,9 @@
     "clsx": "^2.1.1",
     "firebase": "^12.3.0",
     "framer-motion": "^12.23.12",
+    "lucide-react": "^0.544.0",
     "next": "15.5.0",
-    "react": "19.1.0",
+    "react": "^19.1.0",
     "react-dom": "19.1.0",
     "react-icons": "^5.5.0",
     "swiper": "^12.0.2"
